feat: Added logged status for clients
